force-app/main/default/objects/Related_Organisation__c/Related_Organisation__c.object-meta.xml
<CustomObject>
    <description>Links an organisation to another org</description>
    <label>Related Organisation</label>
    <nameField>
        <displayFormat>RO - {000000}</displayFormat>
        <label>Organisation Relationship Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Organisations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>