force-app/main/default/objects/Related_Organisation__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <label>Family</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related Organisations</relationshipLabel>
    <relationshipName>Related_Organisations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>