force-app/main/default/objects/Related_Organisation__c/fields/Related_Organisation__c.field-meta.xml
<CustomField>
    <fullName>Related_Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Families</relationshipLabel>
    <relationshipName>Related_Organisations1</relationshipName>
    <type>Lookup</type>
</CustomField>