force-app/main/default/objects/Related_Organisation__c/fields/Related_Organisation_Type__c.field-meta.xml
<CustomField>
    <fullName>Related_Organisation_Type__c</fullName>
    <formula>Related_Organisation__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Organisation Type</label>
    <type>Text</type>
</CustomField>