force-app/main/default/objects/Related_Organisation__c/fields/Relationship_id__c.field-meta.xml
<CustomField>
    <fullName>Relationship_id__c</fullName>
    <externalId>true</externalId>
    <label>Relationship_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>